<resources>
    <integer name="com_vk_sdk_AppId">5440298</integer>

    <string name="app_name">DroidFM</string>
    <string name="action_settings">Settings</string>
    <string name="last_fm_api_key">c0cca0938e628d1582474f036955fcfa</string>
    <string name="last_fm_shared_secret">fa8286042ffb474f318a755e33b11142</string>

    <string name="sound_cloud_client_id">777369e3ab30d6f25196c5eca1de96e4</string>
    <string name="sound_cloud_secret_id">c0da5a0be7ef5227b71be2d4ac32730a</string>


    <string name="tracks_section_title">Tracks</string>
    <string name="charts_section_title">Charts</string>
    <string name="artists_section_title">Artists</string>
    <string name="favorite_section_title">Favorites</string>
    <string name="saved_section_title">Saved tracks</string>
    <string name="popular_vk_tracks_section_title">Popular VK Tracks</string>

    <!--Artist content details-->
    <string name="tab_title_top_tracks">Top Tracks</string>
    <string name="tab_title_top_albums">Top Albums</string>
    <string name="tab_title_top_artists">Top Artists</string>


    <string name="navigation_drawer_open">Close menu</string>
    <string name="navigation_drawer_close">Open menu</string>
    <string name="transition_artist_image">artistImage</string>

    <string name="duration">duration: %1$2s</string>
    <string name="not_track_error_message">Oops,can\'t find</string>
    <string name="download_title">"DroidFM save track "</string>
    <string name="download_start_toast">Downloading started</string>
    <string name="download_was_downloaded_toast">The track was downloaded earlier</string>
    <string name="mp3_file">.mp3</string>
</resources>
